--- a/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
@@ -651,6 +651,27 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CRmy1vxlLku1"
+      },
+      "source": [
+        "# Datos en entrenamiento y test.\n",
+        "# ==============================================================================\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(\n",
+        "                                        data.drop('TOTAL_BAJAS', axis = 'columns'),\n",
+        "                                        data['TOTAL_BAJAS'],\n",
+        "                                        train_size   = 0.8,\n",
+        "                                        random_state = 1234,\n",
+        "                                        shuffle      = True\n",
+        "                                    )"
+      ],
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "hpFu72_s7-mj"
