--- a/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
@@ -672,6 +672,80 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UP8_d2tVL7mA",
+        "outputId": "8ab9427a-4672-4fc4-9220-49668d6c9af3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 173
+        }
+      },
+      "source": [
+        "y_test.describe()"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "count       4.000000\n",
+              "mean     1108.250000\n",
+              "std       302.584837\n",
+              "min       817.000000\n",
+              "25%       937.750000\n",
+              "50%      1046.000000\n",
+              "75%      1216.500000\n",
+              "max      1524.000000\n",
+              "Name: TOTAL_BAJAS, dtype: float64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "L6VkDy_bMwLu",
+        "outputId": "1270565b-157f-4dc1-87f3-23fd33ef941e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 173
+        }
+      },
+      "source": [
+        "y_train.describe()"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "count      15.000000\n",
+              "mean     1484.466667\n",
+              "std       382.753159\n",
+              "min      1018.000000\n",
+              "25%      1211.000000\n",
+              "50%      1476.000000\n",
+              "75%      1603.500000\n",
+              "max      2435.000000\n",
+              "Name: TOTAL_BAJAS, dtype: float64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 30
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "hpFu72_s7-mj"
