--- a/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
@@ -50,7 +50,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 1,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -66,17 +66,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "07c171bc-2911-4dad-a98d-d56d16fd8e91",
+        "outputId": "0a37694b-b6d1-4ded-d6d5-d5fbbe3738a8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 55
         }
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 3,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,10 +91,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "0JYqth2Ty8-k",
-        "outputId": "67751750-31ed-4e32-8e18-76aa0b45d4e7",
+        "outputId": "7af02110-f41b-41cd-e2a0-6a7dd9e1c3e5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 71
+          "height": 72
         }
       },
       "source": [
@@ -103,7 +103,7 @@
         "Y  = data.iloc[:,9]\n",
         "Y = Y[:,np.newaxis]"
       ],
-      "execution_count": 4,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,17 +130,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "SKroeJSlQx_H",
-        "outputId": "34a721c0-74f5-46d9-8934-5ebb0b701a9c",
+        "outputId": "91647ca8-88cb-4eb9-8c59-5a7b4230acf3",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         }
       },
       "source": [
         "#Dimensiones\n",
         "data.shape"
       ],
-      "execution_count": 7,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -152,7 +152,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 43
         }
       ]
     },
@@ -163,7 +163,7 @@
         "outputId": "2d56932f-34c5-459e-89ee-d54e980e8e60",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 306
+          "height": 312
         }
       },
       "source": [
@@ -228,7 +228,7 @@
         "outputId": "e50a074a-2eac-4f08-c119-802f81366898",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 297
+          "height": 314
         }
       },
       "source": [
@@ -408,7 +408,7 @@
         "outputId": "8aa108b8-9e3b-498e-f631-3451cd6b15aa",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 306
+          "height": 312
         }
       },
       "source": [
@@ -455,7 +455,7 @@
         "outputId": "9c6ad6ca-9d72-452d-9cf4-cd63b8b240fb",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 173
+          "height": 171
         }
       },
       "source": [
@@ -744,6 +744,63 @@
           "execution_count": 30
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Fg0sJrCyaUGt",
+        "outputId": "a5d0b1ac-d049-4d35-d444-e0fa2b22690f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 124
+        }
+      },
+      "source": [
+        "#selección de caracteristicas basadas en L1\n",
+        "from sklearn.svm import LinearSVC\n",
+        "from sklearn.feature_selection import SelectFromModel\n",
+        "\n",
+        "lsvc = LinearSVC(C=0.01, penalty=\"l1\", dual=False).fit(X, Y)\n",
+        "model = SelectFromModel(lsvc, prefit=True)\n",
+        "X_new = model.transform(X)\n",
+        "X_new.shape\n"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py:760: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+            "  y = column_or_1d(y, warn=True)\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/svm/_base.py:947: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+            "  \"the number of iterations.\", ConvergenceWarning)\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(19, 5)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "O-KtZ2ImfHka"
+      },
+      "source": [
+        "X_new "
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
