--- a/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
@@ -66,7 +66,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "0a37694b-b6d1-4ded-d6d5-d5fbbe3738a8",
+        "outputId": "bedb65e3-347c-4bb3-ab59-28ec6807b718",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 55
@@ -76,7 +76,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 41,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,7 +91,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "0JYqth2Ty8-k",
-        "outputId": "7af02110-f41b-41cd-e2a0-6a7dd9e1c3e5",
+        "outputId": "9f3a3c70-c932-481d-be58-0fd432f435f3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
@@ -103,7 +103,7 @@
         "Y  = data.iloc[:,9]\n",
         "Y = Y[:,np.newaxis]"
       ],
-      "execution_count": 42,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,42 +159,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_NVfJosGApzx",
-        "outputId": "2d56932f-34c5-459e-89ee-d54e980e8e60",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 312
-        }
+        "id": "_NVfJosGApzx"
       },
       "source": [
         "data.info()"
       ],
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 19 entries, 0 to 18\n",
-            "Data columns (total 10 columns):\n",
-            " #   Column           Non-Null Count  Dtype\n",
-            "---  ------           --------------  -----\n",
-            " 0   ANIO_BAJA        19 non-null     int64\n",
-            " 1   MES_BAJA         19 non-null     int64\n",
-            " 2   TRIM_1           19 non-null     int64\n",
-            " 3   TRIM_2           19 non-null     int64\n",
-            " 4   TRIM_3           19 non-null     int64\n",
-            " 5   TRIM_4           19 non-null     int64\n",
-            " 6   ENTRE_1_2_ANIOS  19 non-null     int64\n",
-            " 7   ENTRE_3_4_ANIOS  19 non-null     int64\n",
-            " 8   MAS_5_ANIOS      19 non-null     int64\n",
-            " 9   TOTAL_BAJAS      19 non-null     int64\n",
-            "dtypes: int64(10)\n",
-            "memory usage: 1.6 KB\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -207,7 +178,36 @@
         "data.MES_BAJA = data.MES_BAJA.astype(\"str\")\n",
         "data.ANIO_BAJA = data.ANIO_BAJA.astype(\"str\")"
       ],
-      "execution_count": 19,
+      "execution_count": 53,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WehBFvYzgUuO"
+      },
+      "source": [
+        "#pasamos las variables cualitativas a binarias\n",
+        "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
+        "from sklearn.compose import ColumnTransformer\n",
+        "\n",
+        "labelencoder= LabelEncoder()\n",
+        "X[:,0] = labelencoder.fit_transform(X[:,0])\n",
+        "ct = ColumnTransformer([('one_hot_encoder',OneHotEncoder(categories='auto'),[0])],remainder='passthrough')\n",
+        "X=np.array(ct.fit_transform(X),dtype=np.int)"
+      ],
+      "execution_count": 60,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "faZCFjCfg2ZT"
+      },
+      "source": [
+        "data.ANIO_BAJA"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -404,49 +404,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7Pbjalejyw6G",
-        "outputId": "8aa108b8-9e3b-498e-f631-3451cd6b15aa",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 312
-        }
+        "id": "7Pbjalejyw6G"
       },
       "source": [
         "# Valores observados de 1trim\n",
         "# ==============================================================================\n",
         "data.TRIM_1.value_counts()"
       ],
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "20    2\n",
-              "43    2\n",
-              "35    2\n",
-              "29    1\n",
-              "26    1\n",
-              "88    1\n",
-              "23    1\n",
-              "54    1\n",
-              "19    1\n",
-              "51    1\n",
-              "44    1\n",
-              "42    1\n",
-              "39    1\n",
-              "69    1\n",
-              "99    1\n",
-              "34    1\n",
-              "Name: TRIM_1, dtype: int64"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 12
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
