--- a/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
@@ -50,7 +50,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 40,
+      "execution_count": 105,
       "outputs": []
     },
     {
@@ -66,7 +66,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "bedb65e3-347c-4bb3-ab59-28ec6807b718",
+        "outputId": "88937961-2f4d-4f5d-b314-11ead193535b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 55
@@ -76,7 +76,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 50,
+      "execution_count": 106,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,7 +91,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "0JYqth2Ty8-k",
-        "outputId": "9f3a3c70-c932-481d-be58-0fd432f435f3",
+        "outputId": "0d436e46-3474-44cb-e89f-7c2525d9b5e5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
@@ -103,7 +103,7 @@
         "Y  = data.iloc[:,9]\n",
         "Y = Y[:,np.newaxis]"
       ],
-      "execution_count": 51,
+      "execution_count": 107,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,7 +130,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "SKroeJSlQx_H",
-        "outputId": "91647ca8-88cb-4eb9-8c59-5a7b4230acf3",
+        "outputId": "561c3ff4-d69d-4be6-81a8-9fe2be1cd0c9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -140,7 +140,7 @@
         "#Dimensiones\n",
         "data.shape"
       ],
-      "execution_count": 43,
+      "execution_count": 108,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -152,7 +152,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 43
+          "execution_count": 108
         }
       ]
     },
@@ -178,7 +178,7 @@
         "data.MES_BAJA = data.MES_BAJA.astype(\"str\")\n",
         "data.ANIO_BAJA = data.ANIO_BAJA.astype(\"str\")"
       ],
-      "execution_count": 53,
+      "execution_count": 109,
       "outputs": []
     },
     {
@@ -192,11 +192,26 @@
         "from sklearn.compose import ColumnTransformer\n",
         "\n",
         "labelencoder= LabelEncoder()\n",
-        "X[:,0] = labelencoder.fit_transform(X[:,0])\n",
-        "ct = ColumnTransformer([('one_hot_encoder',OneHotEncoder(categories='auto'),[0])],remainder='passthrough')\n",
-        "X=np.array(ct.fit_transform(X),dtype=np.int)"
+        "X[:,0]= labelencoder.fit_transform(X[:,0])\n",
+        "X[:,1]= labelencoder.fit_transform(X[:,1])\n",
+        "\n",
+        "ct = ColumnTransformer([('one_hot_encoder',OneHotEncoder(categories='auto'),[0,1])],remainder='passthrough')\n",
+        "X=np.array(ct.fit_transform(X),dtype=np.int)\n",
+        "\n",
+        "X = X[:,1:]\n"
       ],
-      "execution_count": 60,
+      "execution_count": 110,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XHeIqMSEiQOK"
+      },
+      "source": [
+        "pd.DataFrame(X)"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
