--- a/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
@@ -153,6 +153,63 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "4N5oyNGCs3AO",
+        "outputId": "44229e70-f10c-46c6-f18a-db7529d7e005",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 124
+        }
+      },
+      "source": [
+        "#selección de caracteristicas basadas en L1\n",
+        "from sklearn.svm import LinearSVC\n",
+        "from sklearn.feature_selection import SelectFromModel\n",
+        "\n",
+        "lsvc = LinearSVC(C=0.01, penalty=\"l1\", dual=False).fit(X, Y)\n",
+        "model = SelectFromModel(lsvc, prefit=True)\n",
+        "X2 = model.transform(X)\n",
+        "X2.shape"
+      ],
+      "execution_count": 130,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py:760: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+            "  y = column_or_1d(y, warn=True)\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/svm/_base.py:947: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+            "  \"the number of iterations.\", ConvergenceWarning)\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(19, 5)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 130
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UNIg2PDVtL2I"
+      },
+      "source": [
+        "pd.DataFrame(X2)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "4xNXrQvmqqCk"
       },
       "source": [
@@ -160,15 +217,12 @@
         "# ==============================================================================\n",
         "from sklearn.model_selection import train_test_split\n",
         "\n",
-        "X_train, X_test, y_train, y_test = train_test_split(\n",
-        "                                        data.drop('TOTAL_BAJAS', axis = 'columns'),\n",
-        "                                        data['TOTAL_BAJAS'],\n",
-        "                                        train_size   = 0.8,\n",
+        "x_train, x_test, y_train, y_test = train_test_split(X2, Y,train_size = 0.8,\n",
         "                                        random_state = 1234,\n",
         "                                        shuffle      = True\n",
         "                                    )"
       ],
-      "execution_count": null,
+      "execution_count": 134,
       "outputs": []
     },
     {
@@ -177,7 +231,7 @@
         "id": "XHeIqMSEiQOK"
       },
       "source": [
-        "pd.DataFrame(X)"
+        "pd.DataFrame(x_train)"
       ],
       "execution_count": null,
       "outputs": []
@@ -202,27 +256,6 @@
       "source": [
         ""
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "CRmy1vxlLku1"
-      },
-      "source": [
-        "# Datos en entrenamiento y test.\n",
-        "# ==============================================================================\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "\n",
-        "X_train, X_test, y_train, y_test = train_test_split(\n",
-        "                                        data.drop('TOTAL_BAJAS', axis = 'columns'),\n",
-        "                                        data['TOTAL_BAJAS'],\n",
-        "                                        train_size   = 0.8,\n",
-        "                                        random_state = 1234,\n",
-        "                                        shuffle      = True\n",
-        "                                    )"
-      ],
-      "execution_count": 29,
-      "outputs": []
     },
     {
       "cell_type": "code",
