--- a/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
@@ -237,18 +237,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Hy51sMesxJ7a"
-      },
-      "source": [
-        "# Variables numéricas\n",
-        "#data.select_dtypes(include=['float64', 'int']).describe()"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "zPAqqmtHFw5k"
@@ -320,33 +308,8 @@
       "source": [
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import accuracy_score\n",
-        "from sklearn.svm import SVR"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "G5BKDtaa8EY5"
-      },
-      "source": [
-        "x  = x_mes[ c3[:,0]==1 , 0 ]\n",
-        "y  = Y [ c3[:,0]==1 , 0 ]\n",
-        "x  = x[:,np.newaxis]\n",
-        "y  = y[:,np.newaxis]\n",
+        "from sklearn.svm import SVR\n",
         "\n",
-        "x_train, x_test, y_train, y_test = train_test_split(x,y ,test_size=0.2, random_state=0)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "hgCuk9XMWJAj"
-      },
-      "source": [
         "svr= SVR(kernel='rbf',degree=3, C=1.0, epsilon=0.2)\n",
         "svr.fit(x_train,y_train)"
       ],
@@ -361,23 +324,23 @@
       "source": [
         "y_predic = svr.predict(x_test)"
       ],
-      "execution_count": null,
+      "execution_count": 138,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "JTGGGcQha12I",
-        "outputId": "0fe4e231-d629-467f-dbc0-6c17ade8875d",
+        "outputId": "e063c481-964f-40ac-9d5c-72baf89a49d0",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         }
       },
       "source": [
         "print(svr.score(x_test,y_predic))"
       ],
-      "execution_count": null,
+      "execution_count": 139,
       "outputs": [
         {
           "output_type": "stream",
