--- a/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
@@ -50,7 +50,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 140,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -66,22 +66,22 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "d8158de3-49c2-4814-cfc7-a9df3b028636",
+        "outputId": "2c2f7b6a-6e2c-471a-d2e6-0ff94dc06447",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 55
+          "height": 35
         }
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 148,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -91,7 +91,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "0JYqth2Ty8-k",
-        "outputId": "108f8661-c660-4dfb-e6e5-c78a9db40ef9",
+        "outputId": "9ec1e610-8664-40a3-e180-4efa4be26370",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
@@ -105,7 +105,7 @@
         "Y  = data.iloc[:,9]\n",
         "Y = Y[:,np.newaxis]"
       ],
-      "execution_count": 149,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,14 +147,14 @@
         "\n",
         "X = X[:,1:]\n"
       ],
-      "execution_count": 150,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "4N5oyNGCs3AO",
-        "outputId": "9f7805e3-9c22-4d73-b682-cc697a94149c",
+        "outputId": "3d29c700-d2ff-4a3c-b284-002f0ddc4262",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 124
@@ -170,7 +170,7 @@
         "X2 = model.transform(X)\n",
         "X2.shape"
       ],
-      "execution_count": 151,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,7 +192,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 151
+          "execution_count": 6
         }
       ]
     },
@@ -220,9 +220,14 @@
         "x_train, x_test, y_train, y_test = train_test_split(X2, Y,train_size = 0.8,\n",
         "                                        random_state = 1234,\n",
         "                                        shuffle      = True\n",
-        "                                    )"
+        "                                    )\n",
+        "\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "sc_x = StandardScaler()\n",
+        "x_train = sc_x.fit_transform(x_train)\n",
+        "x_test = sc_x.fit_transform(x_test)\n"
       ],
-      "execution_count": 153,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -248,7 +253,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "A22ITLBX8C9W"
+        "id": "A22ITLBX8C9W",
+        "outputId": "07bbb3f1-5ace-4f5f-c678-d4bfe7828ab7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 107
+        }
       },
       "source": [
         "from sklearn.model_selection import train_test_split\n",
@@ -258,8 +268,30 @@
         "svr= SVR(kernel='rbf',degree=3, C=1.0, epsilon=0.2)\n",
         "svr.fit(x_train,y_train)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 155,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py:760: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+            "  y = column_or_1d(y, warn=True)\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "SVR(C=1.0, cache_size=200, coef0=0.0, degree=3, epsilon=0.2, gamma='scale',\n",
+              "    kernel='rbf', max_iter=-1, shrinking=True, tol=0.001, verbose=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 155
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -269,14 +301,14 @@
       "source": [
         "y_predic = svr.predict(x_test)"
       ],
-      "execution_count": 138,
+      "execution_count": 156,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "JTGGGcQha12I",
-        "outputId": "e063c481-964f-40ac-9d5c-72baf89a49d0",
+        "outputId": "9142bbcf-8f09-47c6-ea97-2364909ffb50",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -285,7 +317,7 @@
       "source": [
         "print(svr.score(x_test,y_predic))"
       ],
-      "execution_count": 139,
+      "execution_count": 157,
       "outputs": [
         {
           "output_type": "stream",
@@ -295,6 +327,78 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SN9Bl0TYwYWU",
+        "outputId": "ce7c4e0b-774f-4a85-b958-facc29aca0b8",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 87
+        }
+      },
+      "source": [
+        "x_test"
+      ],
+      "execution_count": 160,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 29, 134, 470, 294,  19],\n",
+              "       [ 19, 168, 590, 294,   6],\n",
+              "       [ 39, 297, 754, 371,   0],\n",
+              "       [ 69,  99, 350, 231,  38]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 160
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "V2CFwIxowU6k",
+        "outputId": "05371144-12dd-4ee8-d700-b6fa2d07b519",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "y_predic"
+      ],
+      "execution_count": 159,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1474.60646881, 1475.1023778 , 1476.58907666, 1474.38616364])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 159
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iod3jZg-vyXg"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
