--- a/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
@@ -50,7 +50,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 1,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -66,22 +66,22 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "2c2f7b6a-6e2c-471a-d2e6-0ff94dc06447",
+        "outputId": "7b2507e7-e823-4aaa-cff5-441069df01eb",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 55
         }
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -91,7 +91,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "0JYqth2Ty8-k",
-        "outputId": "9ec1e610-8664-40a3-e180-4efa4be26370",
+        "outputId": "0813883f-e8cd-4ef5-9fc6-80dbcb4f147f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
@@ -105,7 +105,7 @@
         "Y  = data.iloc[:,9]\n",
         "Y = Y[:,np.newaxis]"
       ],
-      "execution_count": 4,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,14 +147,14 @@
         "\n",
         "X = X[:,1:]\n"
       ],
-      "execution_count": 5,
+      "execution_count": 18,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "4N5oyNGCs3AO",
-        "outputId": "3d29c700-d2ff-4a3c-b284-002f0ddc4262",
+        "outputId": "67c1bd21-6823-4b6a-b702-9eaca3167551",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 124
@@ -170,7 +170,7 @@
         "X2 = model.transform(X)\n",
         "X2.shape"
       ],
-      "execution_count": 6,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,7 +192,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 19
         }
       ]
     },
@@ -221,13 +221,16 @@
         "                                        random_state = 1234,\n",
         "                                        shuffle      = True\n",
         "                                    )\n",
-        "\n",
+        "#escalamos los datos\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "sc_x = StandardScaler()\n",
+        "sc_y = StandardScaler()\n",
         "x_train = sc_x.fit_transform(x_train)\n",
-        "x_test = sc_x.fit_transform(x_test)\n"
+        "y_train= sc_y.fit_transform(y_train)\n",
+        "x_test = sc_x.fit_transform(x_test)\n",
+        "y_test= sc_y.fit_transform(y_test)\n"
       ],
-      "execution_count": 10,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -237,6 +240,17 @@
       },
       "source": [
         "pd.DataFrame(x_train)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ft7Zl12nX1Lv"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -254,7 +268,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "A22ITLBX8C9W",
-        "outputId": "07bbb3f1-5ace-4f5f-c678-d4bfe7828ab7",
+        "outputId": "fd0402be-3549-4565-b2ee-62aeff965bad",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
@@ -268,7 +282,7 @@
         "svr= SVR(kernel='rbf',degree=3, C=1.0, epsilon=0.2)\n",
         "svr.fit(x_train,y_train)"
       ],
-      "execution_count": 155,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -289,7 +303,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 155
+          "execution_count": 23
         }
       ]
     },
@@ -301,14 +315,14 @@
       "source": [
         "y_predic = svr.predict(x_test)"
       ],
-      "execution_count": 156,
+      "execution_count": 26,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "JTGGGcQha12I",
-        "outputId": "9142bbcf-8f09-47c6-ea97-2364909ffb50",
+        "outputId": "aabbf891-15ab-45e9-ac2b-881928e177a2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -317,7 +331,7 @@
       "source": [
         "print(svr.score(x_test,y_predic))"
       ],
-      "execution_count": 157,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -331,40 +345,19 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SN9Bl0TYwYWU",
-        "outputId": "ce7c4e0b-774f-4a85-b958-facc29aca0b8",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 87
-        }
+        "id": "SN9Bl0TYwYWU"
       },
       "source": [
         "x_test"
       ],
-      "execution_count": 160,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[ 29, 134, 470, 294,  19],\n",
-              "       [ 19, 168, 590, 294,   6],\n",
-              "       [ 39, 297, 754, 371,   0],\n",
-              "       [ 69,  99, 350, 231,  38]])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 160
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "V2CFwIxowU6k",
-        "outputId": "05371144-12dd-4ee8-d700-b6fa2d07b519",
+        "outputId": "ed22e203-6552-4df6-c2ab-66e43c114d51",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -373,19 +366,19 @@
       "source": [
         "y_predic"
       ],
-      "execution_count": 159,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([1474.60646881, 1475.1023778 , 1476.58907666, 1474.38616364])"
+              "array([0.34905209, 0.34905209, 0.34905209, 0.34905209])"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 159
+          "execution_count": 28
         }
       ]
     },
