--- a/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
@@ -41,8 +41,14 @@
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
+        "\n",
+        "#Gráfico\n",
         "from mpl_toolkits.mplot3d import axes3d\n",
-        "import matplotlib.pyplot as plt\n",
+        "import matplotlib.pyplot as plt \n",
+        "from matplotlib import style\n",
+        "import matplotlib.ticker as ticker\n",
+        "import seaborn as sns\n",
+        "\n",
         "import gspread\n",
         "from oauth2client.client import GoogleCredentials \n",
         "from google.colab import auth\n",
@@ -50,7 +56,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 15,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -66,7 +72,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "7b2507e7-e823-4aaa-cff5-441069df01eb",
+        "outputId": "6ffa1f16-d484-4b4c-8020-cc0179bf7c17",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 55
@@ -76,7 +82,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 16,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,7 +97,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "0JYqth2Ty8-k",
-        "outputId": "0813883f-e8cd-4ef5-9fc6-80dbcb4f147f",
+        "outputId": "8216644b-df72-40c8-e799-b7fa02c7e9cb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
@@ -105,7 +111,7 @@
         "Y  = data.iloc[:,9]\n",
         "Y = Y[:,np.newaxis]"
       ],
-      "execution_count": 17,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,14 +153,14 @@
         "\n",
         "X = X[:,1:]\n"
       ],
-      "execution_count": 18,
+      "execution_count": 47,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "4N5oyNGCs3AO",
-        "outputId": "67c1bd21-6823-4b6a-b702-9eaca3167551",
+        "outputId": "8fe277a3-828f-40e2-91ba-f6f4df32b712",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 124
@@ -170,7 +176,7 @@
         "X2 = model.transform(X)\n",
         "X2.shape"
       ],
-      "execution_count": 19,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,7 +198,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 19
+          "execution_count": 48
         }
       ]
     },
@@ -230,7 +236,7 @@
         "x_test = sc_x.fit_transform(x_test)\n",
         "y_test= sc_y.fit_transform(y_test)\n"
       ],
-      "execution_count": 22,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -250,7 +256,7 @@
         "id": "ft7Zl12nX1Lv"
       },
       "source": [
-        ""
+        "x_train"
       ],
       "execution_count": null,
       "outputs": []
@@ -268,7 +274,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "A22ITLBX8C9W",
-        "outputId": "fd0402be-3549-4565-b2ee-62aeff965bad",
+        "outputId": "82699e91-10d5-4a80-d692-18ff15eac7d0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
@@ -282,7 +288,7 @@
         "svr= SVR(kernel='rbf',degree=3, C=1.0, epsilon=0.2)\n",
         "svr.fit(x_train,y_train)"
       ],
-      "execution_count": 23,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
@@ -303,9 +309,42 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 50
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BMJM9p9LZ2SK"
+      },
+      "source": [
+        "# Gráfico de distribución para cada variable  \n",
+        "# ==============================================================================\n",
+        "# Ajustar número de subplots en función del número de columnas\n",
+        "fig, axes = plt.subplots(nrows=15, ncols=5, figsize=(9, 5))\n",
+        "axes = axes.flat\n",
+        "columnas_numeric = x_train\n",
+        "for i in list(range (0,5)): \n",
+        "    sns.distplot(\n",
+        "        x_train[:,i],\n",
+        "        hist    = True,\n",
+        "        rug     = False,\n",
+        "        color   = (list(plt.rcParams['axes.prop_cycle'])*2)[i][\"color\"],\n",
+        "        kde_kws = {'shade': False, 'linewidth': 1},\n",
+        "        ax      = axes[i]\n",
+        "    )\n",
+        "    axes[i].set_title(colum, fontsize = 7, fontweight = \"bold\")\n",
+        "    axes[i].tick_params(labelsize = 6)\n",
+        "    axes[i].set_xlabel(\"\")\n",
+        "    \n",
+        "    \n",
+        "fig.tight_layout()\n",
+        "plt.subplots_adjust(top = 0.9)\n",
+        "fig.suptitle('Distribución variables', fontsize = 10, fontweight = \"bold\");"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -315,14 +354,14 @@
       "source": [
         "y_predic = svr.predict(x_test)"
       ],
-      "execution_count": 26,
+      "execution_count": 36,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "JTGGGcQha12I",
-        "outputId": "aabbf891-15ab-45e9-ac2b-881928e177a2",
+        "outputId": "3c061bcb-5c77-4829-fbd0-b1f962363d93",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -331,7 +370,7 @@
       "source": [
         "print(svr.score(x_test,y_predic))"
       ],
-      "execution_count": 27,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -357,7 +396,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "V2CFwIxowU6k",
-        "outputId": "ed22e203-6552-4df6-c2ab-66e43c114d51",
+        "outputId": "34fda0cb-0067-42e0-f0b9-93eb4009ecb5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -366,19 +405,19 @@
       "source": [
         "y_predic"
       ],
-      "execution_count": 28,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([0.34905209, 0.34905209, 0.34905209, 0.34905209])"
+              "array([-0.66786437, -0.18962612,  0.75040555, -0.08149598])"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 28
+          "execution_count": 39
         }
       ]
     },
